--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 SpeechCommands/bin/Debug/appKeyHueLights.txt
+SpeechCommands/bin/Debug/SpeechCommands.exe
+SpeechCommands/bin/Debug/SpeechCommands.pdb
+SpeechCommands/obj/Debug/SpeechCommands.exe
+SpeechCommands/obj/Debug/SpeechCommands.pdb
